# agent-policy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  action.yml  bootstrap-manifest.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: pr14_absolute_symlink_ancestor_fix.py  pr14_review_fix.py
docs/: adoption.md  architecture.md  bootstrap-model.md  bootstrap.md  cli.md  configuration.md  external-artifact-intake.md  getting-started.md  index.md  managed-operation.md  manifest.webmanifest  offline.html  policy-authoring.md  pwa.md  regression-prevention.md  repository-structure.md  service-worker.js  threat-model.md  web-application-profile.md
overrides/: main.html
profiles/: core.yml  external-artifact-intake.yml  security-baseline.yml  web-application.yml
schemas/: adoption-state.schema.json  agent-policy.schema.json
scripts/: bootstrap.py  generate-doc-assets.py  generate_repository_preview.py  install.py  maintain_github.py  uninstall.py  verify-repository-structure.py
templates/: AGENTS.md.j2  project-policy.md.j2
tests/: test_adoption_absolute_symlink.py  test_adoption_dangling_instruction.py  test_adoption_inspect_prepare.py  test_adoption_path_safety.py  test_adoption_preview_finalize.py  test_adoption_primary_selection.py  test_adoption_skill_validation.py  test_adoption_symlink_primary_finalize.py  test_bootstrap.py  test_config.py  test_config_driven_check.py  test_consumer_discovery.py  test_current_input_symlink.py  test_current_output_symlink.py  test_external_artifact_intake.py  test_paths.py  (+7 more)
(+60 files in other folders)
